change: message controller, swagger api docs, add pagination by get messages.
